[project]
name = "forgetful-ai"
dynamic = ["version"]
description = "MCP Server for AI Agent Memory - persistent, semantically-searchable memory for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Scott", email = "scott@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "dotenv==0.9.9",
    "fastapi==0.129.0",
    "fastembed==0.7.4",
    "fastmcp==3.2.0",
    "google-genai==1.66.0",
    "httpx==0.28.1",
    "ollama==0.6.1",
    "openai==2.20.0",
    "pgvector==0.4.2",
    "platformdirs==4.7.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "requests==2.32.5",
    "sqlalchemy[asyncio]==2.0.46",
    "sqlite-vec==0.1.6",
    "tiktoken==0.12.0",
    "uvicorn==0.40.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]

[project.urls]
Homepage = "https://github.com/scottrbk/forgetful"
Repository = "https://github.com/scottrbk/forgetful"
Issues = "https://github.com/scottrbk/forgetful/issues"

[project.scripts]
forgetful = "main:cli"
forgetful-ai = "main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "app/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["app", "main.py"]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "alembic.ini"
"alembic" = "alembic"

[tool.hatch.build.targets.sdist]
include = ["app", "main.py", "alembic.ini", "alembic/", "README.md", "LICENSE"]
